# src/interfaces/body_requests/IUser.ts
@@ -1,0 +1,6 @@
+export interface IUser {
+    username: string;
+    email: string;
+    password: string;
+    name: string;
+}
